--- a/thankyou.html
+++ b/thankyou.html
@@ -7,17 +7,9 @@
     <link rel="stylesheet" href="css/lastpage.css" />
   </head>
   <body>
-    <div id="thankyou"><b>Thank you</b></div>
-
+    <div id="thankyou"><b>WOOOT!</b></div>
     <img height="300px" id="rizz" src="thanks.png" alt="rizzler god" class="responsive" />
     <br />
-    <audio controls autoplay loop>
-      <source src="congratulations.mp3" type="audio/mpeg" />
-      Your browser does not support the audio element.
-    </audio>
-    <h1>Don't go yet!</h1>
-    <button class="button" onclick="location.href='date.html'">
-      Click me heheehe... 
-    </button>
+    <h1>See you this weekend ;)</h1>
   </body>
 </html>
